--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       content="Travelly is world-wide base travelling company that help people to fullfill their travelling needs at bare minimum cost"
     />
     <title>Travelly | Your travel company</title>
-    <link rel="icon" href="/travell-project/images/icon/plane.svg" />
-    <link rel="stylesheet" href="/travell-project/style.css" />
+    <link rel="icon" href="/images/icon/plane.svg" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pattaya&family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
@@ -47,17 +47,17 @@
           Travelly can make it possible
         </h3>
         <img
-          src="/travell-project/images/image/cloud.png"
+          src="/images/image/cloud.png"
           height="500"
           class="moving-cloud-1 cloud"
         />
         <img
-          src="/travell-project/images/image/cloud.png"
+          src="/images/image/cloud.png"
           height="500"
           class="moving-cloud-2 cloud"
         />
         <img
-          src="/travell-project/images/image/cloud_PNG16.png"
+          src="/images/image/cloud_PNG16.png"
           height="500"
           class="moving-cloud-3 cloud2"
         />
@@ -76,7 +76,7 @@
       <div class="cards">
         <div class="card">
           <div class="card-icon">
-            <img src="/travell-project/images/icon/route-solid.svg" alt="" />
+            <img src="/images/icon/route-solid.svg" alt="" />
           </div>
           <h4>Travel</h4>
           <p>Travel over 250 country with no effort</p>
@@ -84,7 +84,7 @@
 
         <div class="card">
           <div class="card-icon">
-            <img src="/travell-project/images/icon/bed-solid.svg" alt="" />
+            <img src="/images/icon/bed-solid.svg" alt="" />
           </div>
           <h4>Hotel</h4>
           <p>Hotel located near popular areas</p>
@@ -93,7 +93,7 @@
         <div class="card">
           <div class="card-icon">
             <img
-              src="/travell-project/images/icon/plane-departure-solid.svg"
+              src="/images/icon/plane-departure-solid.svg"
               alt=""
             />
           </div>
@@ -131,7 +131,7 @@
           <li>
             <a href="#"
               ><img
-                src="/travell-project/images/icon/twitter-brands.svg"
+                src="/images/icon/twitter-brands.svg"
                 height="30px"
                 alt=""
             /></a>
@@ -139,7 +139,7 @@
           <li>
             <a href="#"
               ><img
-                src="/travell-project/images/icon/facebook-brands.svg"
+                src="/images/icon/facebook-brands.svg"
                 height="30px"
                 alt=""
             /></a>
@@ -147,7 +147,7 @@
           <li>
             <a href="#"
               ><img
-                src="/travell-project/images/icon/instagram-brands.svg"
+                src="/images/icon/instagram-brands.svg"
                 height="30px"
                 alt=""
             /></a>
@@ -155,7 +155,7 @@
           <li>
             <a href="#"
               ><img
-                src="/travell-project/images/icon/youtube-brands.svg"
+                src="/images/icon/youtube-brands.svg"
                 height="30px"
                 alt=""
             /></a>
