--- a/travell-project/index.html
+++ b/travell-project/index.html
@@ -9,7 +9,7 @@
     />
     <title>Travelly | Your travel company</title>
     <link rel="icon" href="/travell-project/images/icon/plane.svg" />
-    <link rel="stylesheet" href="/travell-project/style.css" />
+    <link rel="stylesheet" href="/travell-project/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pattaya&family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
